Change profile pic and more

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,3 +39,10 @@ keywords = {weakly supervised learning, learning from label proportions, hyperpa
 location = {Long Beach, CA, USA},
 series = {KDD '23}
 }
+
+@article{franco2023evaluating,
+  title={Evaluating LLP Methods: Challenges and Approaches},
+  author={Franco, Gabriel and Comarela, Giovanni and Crovella, Mark},
+  journal={arXiv preprint arXiv:2310.19065},
+  year={2023}
+}
