--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -46,3 +46,10 @@ series = {KDD '23}
   journal={arXiv preprint arXiv:2310.19065},
   year={2023}
 }
+
+@article{franco2024sparse,
+  title={Sparse Attention Decomposition Applied to Circuit Tracing},
+  author={Franco, Gabriel and Crovella, Mark},
+  journal={arXiv preprint arXiv:2410.00340},
+  year={2024}
+}
